<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/your_photo_profile"
                    android:padding="10dp"
                    android:src="@drawable/icon_camera"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tx_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/name"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:drawablePadding="16dp"
            android:background="@drawable/rounded_edittext"
            app:drawableStartCompat="@drawable/icon_user" />

        <TextView
            android:id="@+id/tx_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/email"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:drawablePadding="16dp"
            android:background="@drawable/rounded_edittext"
            app:drawableStartCompat="@drawable/icon_email_black" />

        <TextView
            android:id="@+id/tx_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/number_phone"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:drawablePadding="16dp"
            android:background="@drawable/rounded_edittext"
            app:drawableStartCompat="@drawable/icon_hp" />

        <TextView
            android:id="@+id/tx_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/location"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:drawablePadding="16dp"
            android:maxLines="5"
            android:background="@drawable/rounded_edittext"
            app:drawableStartCompat="@drawable/icon_gps_black" />

    </LinearLayout>

    <!-- Floating Action Button untuk Logout -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="656dp"
        android:src="@drawable/logout" /> <!-- Ganti dengan icon logout Anda -->
</RelativeLayout>
