<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="wrap_content"
             android:orientation="vertical"
             android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_margin="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_users_profile"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/human" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"


                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="User Name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_15sdp"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="@dimen/_13sdp"
                                    android:layout_height="@dimen/_13sdp"
                                    android:src="@drawable/icon_email_black" />

                                <TextView
                                    android:id="@+id/tv_emailUser"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/_5sdp"
                                    android:scrollHorizontally="true"
                                    android:singleLine="true"
                                    android:text="@string/email"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_9ssp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="@dimen/_13sdp"
                                    android:layout_height="@dimen/_13sdp"
                                    android:src="@drawable/icon_hp" />

                                <TextView
                                    android:id="@+id/tv_number"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/_5sdp"
                                    android:scrollHorizontally="true"
                                    android:singleLine="true"
                                    android:text="@string/number_phone"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_9ssp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:minWidth="170dp"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="@dimen/_13sdp"
                                    android:layout_height="@dimen/_13sdp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/icon_gps_black_48" />

                                <TextView
                                    android:id="@+id/tv_location"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="@dimen/_5sdp"
                                    android:maxLines="5"
                                    android:text="@string/location"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_9ssp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>